# hindsight-openclaw-pro

./: .gitmodules  CHANGELOG.md  CLAUDE.md  README.md  openclaw.plugin.json  package-lock.json  package.json
docs/: access-control.md  bank-config.md  cli.md  configuration.md
hindclaw-clients/: openapi.json
hindclaw-clients/python/: README.md  hindclaw_client.py  hindclaw_client_api_README.md  pyproject.toml
hindclaw-clients/python/.openapi-generator/: FILES
hindclaw-clients/python/hindclaw_client_api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
hindclaw-clients/python/hindclaw_client_api/api/: __init__.py  default_api.py
hindclaw-clients/python/hindclaw_client_api/models/: __init__.py  add_channel_request.py  add_member_request.py  api_key_create_response.py  api_key_response.py  bank_permission_request.py  bank_permission_response.py  channel_response.py  create_api_key_request.py  create_group_request.py  create_user_request.py  group_member_response.py  group_membership_confirmation.py  group_response.py  group_summary_response.py  http_validation_error.py  resolved_permissions_response.py  strategy_request.py  strategy_scope_response.py  strategy_upsert_confirmation.py  update_group_request.py  update_user_request.py  upsert_confirmation.py  user_response.py  validation_error.py  validation_error_loc_inner.py
hindclaw-docs/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
hindclaw-extension/: pyproject.toml
hindclaw-extension/hindclaw_ext/: __init__.py  db.py  http.py  resolver.py  tenant.py  validator.py
hindclaw-extension/tests/: conftest.py  helpers.py  test_db.py  test_http.py  test_resolver.py  test_tenant.py  test_validator.py
src/: config.test.ts  (+9 more)
(+90 files in other folders)
