[project]
name = "hindclaw-extension"
version = "0.1.0"
description = "Hindclaw access control extensions for Hindsight API"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ruben Khachaturov", email = "mr.kha4a2rov@protonmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "asyncpg>=0.29.0",
    "PyJWT>=2.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "hindsight-api-slim",
]

[project.urls]
Homepage = "https://hindclaw.pro"
Repository = "https://github.com/mrkhachaturov/hindclaw-extension"
Documentation = "https://hindclaw.pro/docs/extension"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.hatch.build.targets.wheel]
packages = ["hindclaw_ext"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
